# CodeRepeat

./: .gitignore  CMakeLists.txt  LICENSE  README.md  clustering.py  code_repeat.py  coderepeat.py  detect_clones.py  filesystem.h  filter.py  repeats.proto  test.sh  test_clone_detection.sh  topN.py
bwt-juha/: CMakeLists.txt  Makefile  bwt  bwt.cpp  bwt.cpp~  bwt.hpp  bwtsa  bwtsa.cpp  data.test  data.test.bwt  data.test.bwt~  data.test1  data.test1.bwt  data.test1.bwt~  data.test1~  data.test2  data.test2.bwt  data.test2~  data.test3  data.test3.bwt  data.test3.bwt~  data.test3~  data.test~  dcsamplesort.hpp  dcsuffixsort.hpp  dependencies.mk  difference_cover.cpp  difference_cover.hpp  distribute.hpp  distribute.hpp~  dnabwt  dnabwt.cpp  dnavector.hpp  doubling.hpp  ibwt  ibwt.cpp  ibwt.hpp  kmpsplit.hpp  mi.bwt  partition.hpp  (+3 more)
clonestats/: CMakeLists.txt  CloneParser.cpp  CloneParser.h  VerboseCloneParser.h  main.cpp
clonestats/json/: JsonListener.h  JsonStreamingParser.cpp  JsonStreamingParser.h
converter/: CMakeLists.txt  main.cpp
findmaxrep/: CMakeLists.txt  arg.cpp  bt.h  bv.cpp  dna_convert.cpp  huffcode.h  main.cpp  main.h  maxrep.cpp  maxrep.h  report.cpp  run.sh  test_bwt_2_lcp.cpp  test_huffcode.cpp  test_huffman.cpp  test_maxrep.cpp  test_report.cpp  wt_node.h
findrepset/: CMakeLists.txt  LICENSE  bitarray.h  bittree.c  bittree.h  bwt.c  bwt.h  common.c  common.h  config.h  cop.c  cop.h  enc.c  enc.h  filecop.c  lcp.c  lcp.h  macros.h  mmrs.c  mmrs.h  mrs.c  mrs.h  output_callbacks.c  output_callbacks.h  runcop.c  sorters.h  tiempos.c  tiempos.h  tipos.h
findrepset_csa/: CMakeLists.txt  main.cpp
notebook/: AnalyzeClones.ipynb  Clustering-Yoriyuki.ipynb  Clustering.ipynb  HeatMap.ipynb  connectivity.csv  distance.csv
notebook/.ipynb_checkpoints/: Clustering-checkpoint.ipynb
postprocessor/: CMakeLists.txt  main.cpp  stringescape.cpp  stringescape.h
postprocessor/zlib/: strict_fstream.hpp  zstr.hpp
preprocessor/: CMakeLists.txt  main.cpp
scripts/: bigcloneeval.py  clonepairs.py  filter.py  test_clone_detection.sh  topN.py  validate.py
test/comment_test/: 9998145.java  comment-test.java
test2/: c-typeck.c  semantics.c
util/: ArgParser.h  stringescape.h
v.3.6.2/: CMakeLists.txt  Makefile  arg.cpp  arg.h  bt.cpp  bv.h  bwt_2_lcp.cpp  bwt_2_lcp.h  findmaxrep  huffcode.cpp  main.cpp  main.h  main.randtest.cpp  maxrep.cpp  report.cpp  report.h  test_bt  test_bt.cpp  test_bv  test_bv.cpp  test_bwt_2_lcp  test_huffcode  test_maxrep  test_report  test_wt  test_wt.cpp  uti.cpp  uti.h  wt.h
